tests/NormalTests/paczka1/fuzzy1/62567735.err
Error in line 1: zH0Q5z8 S702 14,4
Error in line 17: CcHVSwgS A357 -3,7
Error in line 10: eGgsnLIOTc A357 35,5
Error in line 18: eGgsnLIOTc S702 27,2
Error in line 20: EzNFU A357 14,3
Error in line 30: zH0Q5z8 A937 65,3
